# HRC-PalletizingPlanner

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  HR_S50-2000.hard  LICENSE  README.md  S50_Layout_Optimization_Model.md  S50_Layout_Optimization_Model_v3.md  S50_Palletizing_Scene_Description.md  p2p_path.txt  palletizing_spline.txt  path_optimized.txt  path_raw.txt  path_spline.txt  pick_place_cartesian.txt  raw_path.txt  trajectory.txt  trajectory_positions.txt  trajectory_viz.txt  visualize_palletizing.py  visualize_trajectory.py
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: a.agent.md
.github/workflows/: ci.yml
ArmCollisionModel/: PalletizingSimApp.m  PalletizingSimApp_v1.m  README.txt  diagnostic_so_frames.m  dlopen_global.c  dlopen_global.mexa64  dual_armRobotCollisionModel.m  dynamic_test_output.txt  matlab.mat  matlab_output.txt  palletizing_improved_log.txt  s50_collision_matlab.h  s50_tcp_stubs.c  testDynamic.m  testElfin.m  testElfin5_Comprehensive.m  testElfin5_Palletizing.m  testElfin_withTool.m  testS50.m  testS50_Dynamic.m  testS50_Palletizing_backup.m  testS50_Palletizing_v10.m  testS50_Palletizing_v11.m  testS50_Palletizing_v13.m  testS50_Palletizing_v14.m  testS50_Palletizing_v15.m  testS50_Palletizing_v2.m  testS50_Palletizing_v61_backup.m  testS50_Palletizing_v7_backup.m  testS50_Palletizing_v8.m  testS50_Palletizing_v9.m  testS50_Quick.m  testSSerial.m  testSSerial_withTool.m  test_dual_arm.m  test_helpers_unit.m  test_screenshot_v2.m  test_screenshot_v21.m  test_v22.m  test_v3_headless.m
ArmCollisionModel/@RobotCollisionModel/: RobotCollisionModel.m
ArmCollisionModel/collisionVisual/: addcollisionVisualPath.m  plotCollisionModel.m  plotSSerialCollisionModel.m  plot_dual_armCollisionModel.m  testInterface.m  testJson2.m  transformGraphicsObject.m
ArmCollisionModel/collisionVisual/data/: output1.json  output2.json
ArmCollisionModel/collisionVisual/fileOperation/: dual_arm_saveUIdata.m  readCollisionModelJson.m  readToolCollisionJson.m  readToolTableFromJson.m  read_dual_arm_ModelJson.m  saveUIdata.m
ArmCollisionModel/collisionVisual/kinematic/: FK.m  FK_SSerial.m  dual_arm_FKl.m  dual_arm_FKr.m  rotation2rpy.m  rpy2Rotation.m
ArmCollisionModel/collisionVisual/plotGeometry/: drawBoxBallSweptVolume.m  dual_arm_left_plotSelfCollisonModel.m  dual_arm_right_plotSelfCollisonModel.m  plotBall.m  plotCapsule.m  plotCube.m  plotSelfCollisonModel.m  plotToolCollisonModel.m  plotframe.m
ArmCollisionModel/data/: S05_output.json  S10_output.json  S20_output.json  S30_output.json  S50_output.json  dual_arm_output.json  elfin10_output.json  elfin15_output.json  elfin3_output.json  elfin5_output.json
ArmCollisionModel/data/testCase/: testCase1.json  testCase2.json  testCase3.json
ArmCollisionModel/helpers/: README.m  axang2r_local.m  boxArmCollDist.m  boxOBBClearance.m  drawBox3D_v11.m  drawBox_v11.m  drawCabinet_v11.m  drawCapsule3D.m  drawCapsule3D_h.m  drawConveyor_v15.m  drawCylinder3D.m  drawFrame_v11.m  drawGround_v11.m  drawInfoPanel_v15.m  drawOBBWall3D.m  drawPallet_v11.m  drawRotatedBox.m  drawTube_v11.m  drawWallPanel3D.m  fk2Skeleton.m  getField.m  ifelse.m  loadNumericData.m  makeRotRPY.m  makeRotX.m  makeRotY.m  makeRotZ.m  makeTrans.m  optimizeBoxRotation.m  readSummaryFile.m  renderCapsuleRobotHandles.m  renderSTLRobot.m  renderSTLRobotHandles.m  renderSTLRobotOnBase.m  saveFig.m  saveKeyframeFig.m  soFK2Skeleton.m  urdfFK.m
HRCInterface/: InterfaceDataStruct.h  algorithmLibInterface.h  hansTypeDef.h  stack_utils.h
config/collideConfig/: E05_collision.json  Env_collision.json  S05_collision.json  S10_collision.json  S20_collision.json  S30_collision.json  S50_collision.json  S_tool_collision.json  S_tool_collision2.json  S_tool_collision_Burongbin.json  S_tool_collision_xiaodan.json  elfin10_collision.json  elfin15_collision.json  elfin3_collision.json  nonetool_collision.json  tool_collision.json
data/: high_perf_trajectory.txt  iter1_result.txt  layout_v3_result.json  palletizing_path.txt  palletizing_simplified.txt  palletizing_spline.txt  palletizing_viz_data.txt  palletizing_workflow.txt  path_raw.txt  pick_place_path.txt  pose_result.txt  raw_path.txt  scene_obstacles.txt  simulation_trajectory.csv  so_palletizing_profile.csv  so_palletizing_summary.txt  so_palletizing_trajectory.txt
data/collision_viz/: test_4_Folded.ply  trajectory_data.csv
data/sim3d/: README.md  index_old.html  palletizing_scene.json
docs/: API.md  CODE_AUDIT_REPORT.md  CODE_REVIEW_AND_TEST_REPORT.md  PROJECT_STRUCTURE_ANALYSIS.md  SIMULATION_PROCESS.md  V18_Test_Report.md
docs/archive/: ISSUES_REPORT_2026-02-25.md  ITERATION_PLAN.md  PROJECT_ANALYSIS.md
examples/: README.md  basic_planning_example.cpp  basic_planning_example_so.cpp  palletizing_example.cpp
include/CmpRML/: CmpRML.h
include/PalletizingPlanner/: BoxCollisionChecker.hpp  CollisionCache.hpp  CollisionChecker.hpp  CollisionCheckerSO.hpp  CollisionGeometry.hpp  HighPerformancePlanner.hpp  KDTree.hpp  NumericalIK.hpp  PalletizingPlanner.hpp  PalletizingScene.hpp.bak  ParallelPathPlanner.hpp  PathOptimizer.hpp  PathOptimizerOptimized.hpp  PathPlanner.hpp  PathPlannerOptimized.hpp  PathPlannerSO.hpp  README.md  RobotModel.hpp  TaskSequencer.hpp  TimeParameterization.hpp  TimeParameterizationOptimized.hpp  Types.hpp
lib/: libHRCInterface.so.1  libHRCInterface.so.1.0.0  stub_dependencies.c
robotModel/robotKinDynamicModel/: robotKinDynamicModel.h
scripts/: box_arm_distance_analysis.py  visualize_palletizing.py  visualize_path.py  visualize_s50_stl.py  visualize_scene.py  visualize_scene.py.backup
test/: CMakeLists.txt  testBoxArmCollision.cpp  testCollisionDetectionTime.cpp  testCollisionSimulation.cpp  testHighPerformance.cpp  testPalletizingPlanner.cpp  testPalletizingScenarioRML.cpp  testPerformanceBenchmark.cpp  testRMLProbe.cpp  testRobustnessValidation.cpp  testS50CollisionRML.cpp  testS50CollisionSO.cpp  testS50PalletizingRML.cpp  testS50PalletizingSO.cpp  testTrajectoryOptimality.cpp
(+91 files in other folders)
